# AQP_middleware

./: .gitmodules  CMakeLists.txt  README.md
examples/: test_duckdb.cpp  test_postgres.cpp
include/: db_adapter.h  duckdb_adapter.h  postgres_adapter.h  util.h
include/adapters/: db_adapter.h  duckdb_adapter.h  mariadb_adapter.h  opengauss_adapter.h  postgres_adapter.h  umbra_adapter.h
include/split/: fk_based_splitter.h  foreign_key_extractor.h  ir_query_splitter.h  ir_reorder_get.h  ir_utils.h  node_based_splitter.h  select_sub_ir.h  split_algorithm.h  topdown_splitter.h
include/util/: param_config.h  util.h
measure/: compile.sh  hyperfine_dsb.sh  hyperfine_job.sh  measure_breakdown_time_dsb.sh  measure_breakdown_time_job.sh  measure_dsb.sh  measure_job.sh  measure_umbra.sh  run_dsb.sh  run_job.sh  run_mariadb.sh  run_opengauss.sh  run_umbra.sh
measure/job_result/: aqp_middleware_duckdb_job.csv  aqp_middleware_mariadb_job.csv  aqp_middleware_mariadb_node-based_job.csv  aqp_middleware_postgres_job.csv  mariadb_official.csv  official_umbra_job.csv  pg_Official.csv
src/: aqp_middleware.cpp  util.cpp
src/adapters/: duckdb_adapter.cpp  mariadb_adapter.cpp  opengauss_adapter.cpp  postgres_adapter.cpp  umbra_adapter.cpp
src/split/: fk_based_splitter.cpp  foreign_key_extractor.cpp  ir_query_splitter.cpp  ir_reorder_get.cpp  ir_utils.cpp  node_based_splitter.cpp  select_sub_ir.cpp  split_algorithm.cpp  topdown_splitter.cpp
src/util/: param_config.cpp  util.cpp
